[package]
name = "em"
description = "A language/procedural macro for programming GPUs"
license = "MIT"
version = "0.1.3"
authors = ["calebwin <calebhwin@gmail.com>"]
edition = "2018"

homepage = "https://calebwin.github.io/emu/"
repository = "https://github.com/calebwin/emu"
readme = "README.md"

keywords = ["gpu", "opencl", "science", "math", "language"]
categories = ["science", "simulation", "hardware-support", "development-tools::ffi", "external-ffi-bindings"]

[dependencies]
quote = "0.6.11"
syn = { version = "0.15.29", features = ["full", "visit", "extra-traits"] }

[lib]
proc-macro = true