[package]
name = "em"
description = "A language/procedural macro for programming GPUs"
license = "MIT"
version = "0.2.0"
authors = ["calebwin <calebhwin@gmail.com>"]
edition = "2018"

homepage = "https://calebwin.github.io/emu/"
repository = "https://github.com/calebwin/emu"
readme = "README.md"

keywords = ["emu", "gpu", "opencl", "gpgpu", "language"]
categories = ["science", "simulation", "hardware-support", "development-tools::ffi", "external-ffi-bindings"]

[dependencies]
quote = "0.6.11"
syn = { version = "0.15.29", features = ["full", "visit", "extra-traits"] }
# ocl  = "0.19.2"

[lib]
proc-macro = true