[package]
name = "em"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
emu_macro = { path = "../emu_macro" } # TODO make this use published crate