[package]
name = "em"
version = "0.3.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A procedural macro for GPU acceleration, GPU programming"
homepage = "https://www.github.com/calebwin/emu"
documentation = "https://docs.rs/em"
repository = "https://www.github.com/calebwin/emu"
readme = "README.md"
keywords = ["emu", "em", "gpu", "gpgpu", "acceleration"]
categories = ["science", "asynchronous", "concurrency", "multimedia", "rendering"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
emu_macro = { path = "../emu_macro" }
