[package]
name = "emu_core"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A low-level WebGPU-based compute library featuring cross-platform support and SPIR-V as input"
homepage = "https://www.github.com/calebwin/emu"
documentation = "https://docs.rs/emu_core"
repository = "https://www.github.com/calebwin/emu"
readme = "README.md"
keywords = ["emu", "glsl", "compute", "em", "emu_glsl"]
categories = ["science", "simulation", "concurrency", "computer-vision", "rendering"]
license = "MIT"
edition = "2018"

# if you are compiling documentation with `cargo doc`,
# be sure to compile with `--features glsl-compil`
# otherwise, there will be links to certain pages that don't exist
[package.metadata.docs.rs]
features = ["glsl-compile"]

[features]
default = []
glsl-compile = ["shaderc"]

[dependencies]
wgpu = "0.5.0"
futures = "0.3.1"
zerocopy = "0.2.0"
lazy_static = "1.4.0"
derive_more = "0.99.2"
shaderc = { version = "0.6.2", optional = true }

[dev-dependencies]
futures = "0.3"
timeit = "0.1.2"
emu_glsl = "0.1.0"
