[package]
name = "emu_glsl"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A toolkit for GLSL-Rust interop"
homepage = "https://www.github.com/calebwin/emu"
documentation = "https://docs.rs/emu_glsl"
repository = "https://www.github.com/calebwin/emu"
readme = "README.md"
keywords = ["emu", "glsl", "compute", "em", "emu_glsl"]
categories = ["science", "simulation", "concurrency", "computer-vision", "rendering"]
license = "MIT"
edition = "2018"

[dependencies]
syn = "1.0.60"
quote = "1.0.9"

[lib]
proc-macro = true
