[package]
name = "emu_macro"
version = "0.1.0"
authors = ["Caleb Winston <calebhwin@gmail.com>"]
description = "A helper for Emu, a procedural macro for GPU acceleration, GPU programming"
homepage = "https://www.github.com/calebwin/emu"
documentation = "https://docs.rs/emu_macro"
repository = "https://www.github.com/calebwin/emu"
readme = "README.md"
keywords = ["emu", "em", "gpu", "gpgpu", "acceleration"]
categories = ["science", "asynchronous", "concurrency", "multimedia", "rendering"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.5", features = ["full", "visit", "fold"] }
quote = "1.0.2"

[dev-dependencies]
em = { path = "../em", version = "0.*" }

[lib]
proc-macro = true